# powersim

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
agent_based/: run.py
agent_based/agents/: base_agent.py  pv_farm.py  wind_farm.py
agent_based/models/: base_model.py
agent_based/schedulers/: concurent_scheduler.py
agent_based/utils/: meteo.py  process.py  process_ready_res_sources.py  save.py  topo_data_process.py
config/: computations.yml  config.yml  data.yml  figures.yml  meteo.yml  pv_stat.yml  time.yml
latex/: Makefile  bibliography.bib  main.tex  pracamgr.cls  refs.bib
latex/chapters/: introduction.tex  mathematical_model.tex  model_matematyczny.tex  theoretical_introduction.tex  wprowadzenie.tex  wstep_teoretyczny.tex
scripts/: get_coodinates.py  get_coordinate.py  get_lon_and_lat.py  gml2json.py  process_gexml_to_parquet.py  union_parquet.py  visualize_map.py  weather_test.py
scripts/analyze/: analyze_output.py
scripts/misc/: weather_test.py
